--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+
+    <h1>Cloverhound Blog: Wes</h1>
+
+    <%= link_to "Home" %>
+    <%= link_to "New Article", new_article_path %>
+
     <%= yield %>
+
   </body>
 </html>
