--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+html {
+	font-family: "Verdana";
+}
+
+
+.header {
+	color: #3eb489;
+	background-color: #f4f4f4;
+	margin: 0;
+}
+
+a {
+	color: #3eb489;
+	text-decoration: none;
+	padding-left: 10px;
+	padding-right: 10px;
+
+}
