--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,12 +2,12 @@
 
 <p><%= @article.body %></p>
 
-<ul>
-	<li><%= link_to "Edit", edit_article_path(@article) %></li>
-	<li><%= link_to "Destroy", article_path(@article),
+<div>
+	<button><%= link_to "Edit", edit_article_path(@article) %></button>
+	<button><%= link_to "Delete", article_path(@article), 
 			method: :delete,
-        	data: { confirm: "Are you sure?" } %></li>
-</ul>
+        	data: { confirm: "Are you sure?" } %></button>
+</div>
 
 <h2>Comments</h2>
 <%= render @article.comments %>
