--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,13 @@
 
   <body>
 
-    <h1>Cloverhound Blog: Wes</h1>
+    <div class=header>
+      <h1>Cloverhound Blog: Wes</h1>
 
-    <%= link_to "Home" %>
-    <%= link_to "New Article", new_article_path %>
+      <button> <%= link_to "Home", root_path %> </button>
+      <button> <%= link_to "New Article", new_article_path %> </button>
+
+    </div>
 
     <%= yield %>
 
