--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.article {
+	background-color: #f4f4f4;
+}
+
+.article-select {
+	background-color: #f4f4f4;
+	padding-left: 25px;
+	padding: 5px;
+}
+
+h2 {
+	text-align: justify;
+}
