--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,15 @@
 <h2>Articles</h2>
 
-<ul>
+
+<div>
+	
 	<% @articles.each do |article| %>
-  		<li>
-    		<%= link_to article.title, article %>
-    	</li>
-  	<% end %>
-</ul>
+
+	<div class=article-select>
+		<%= link_to article.title, article %>
+	</div>
+	<br>
+
+	<% end %>
+	
+</div>
