--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -6,6 +6,11 @@
 	background-color: #f4f4f4;
 }
 
+.article button {
+	border: none;
+	background: none;
+}
+
 .article-select {
 	background-color: #f4f4f4;
 	padding-left: 25px;
