--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 	<h1><%= @article.title %></h1>
 
 	<p><%= @article.body %></p>
-	
+
 	<button><%= link_to "Edit", edit_article_path(@article) %></button>
 	<button><%= link_to "Delete", article_path(@article), 
 			method: :delete,
@@ -11,8 +11,9 @@
 
 <br>
 
+<p style="font-weight: bold;">Add a comment:</p>
+<%= render 'comments/form' %>
+
 <h2>Comments</h2>
 <%= render @article.comments %>
 
-<h3>Add a comment:</h3>
-<%= render 'comments/form' %>
