--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,5 @@
 <div class="comment">
-  	<%= comment.body %>
-  	<br>
+  	<div class="comment-body"><%= comment.body %></div>
   	<%= link_to 'Delete', [comment.article, comment],
               method: :delete,
               data: { confirm: "Are you sure?" } %>
