--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,6 +7,11 @@
 
 	<div class=article-select>
 		<%= link_to article.title, article %>
+		<% if article.body.length > 50 %>
+			<%= article.body[0..45] + "...." %>
+		<% else %>
+			<%= article.body %>
+		<% end %>
 	</div>
 	<br>
 
