--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+.comment {
+	background-color: #f4f4f4;
+
+}
+
+.comment a{
+	text-decoration: none;
+}
+
 .comment-body{
 	padding-left: 10px;
 	padding-bottom: 5px;
