--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,15 +17,16 @@
 .header {
 	color: #3eb489;
 	background-color: #f4f4f4;
-	margin: 0;
+	margin: 1%;
 }
 
 .header a{
 	text-decoration: none;
 }
 
-.comment {
-	background-color: #f4f4f4;
+.article-select {
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
 .article-select a {
@@ -41,14 +42,14 @@ html {
 
 a {
 	color: #3eb489;
-	padding-left: 10px;
-	padding-right: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 
 div {
 	border-radius: 5px;
-	border: 1px ;
+	border: 1px;
 }
 
 button {
