--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -2,8 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+#article-body {
+	margin-left: 1%;
+	margin-right: 1%;
+}
+
 .article {
 	background-color: #f4f4f4;
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
 .article button {
