--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <div class="article">
 	<h1><%= @article.title %></h1>
 
-	<p><%= @article.body %></p>
+	<p id="article-body"><%= @article.body %></p>
 
 	<button><%= link_to "Edit", edit_article_path(@article) %></button>
 	<button><%= link_to "Delete", article_path(@article), 
