--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,8 @@
 <%= form_with model: [ @article, @article.comments.build ] do |form| %>
+	<p>
+		<%= form.text_field :commenter %>
+	</p>
+
     <p>
       <%= form.text_area :body %>
     </p>
