--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="article">
-	<h1><%= @article.title %></h1>
+	<h1 id=title><%= @article.title %></h1>
 
 	<p id="article-body"><%= @article.body %></p>
 
