--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+#title {
+	margin-left: 1%;
+	
+}
+
 #article-body {
 	margin-left: 1%;
 	margin-right: 1%;
