--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 <body>
 
 	<div class=header>
-		<h2>Cloverhound Blog: Wes</h2>
+		<h2 id=header-title>Cloverhound Blog: Wes</h2>
 
-		<button> <%= link_to "Home", root_path %> </button>
+		<button id=header-title> <%= link_to "Home", root_path %> </button>
 		<button> <%= link_to "New Article", new_article_path %> </button>
 
 	</div>
