--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 <body>
 
 	<div class=header>
-		<h2 id=header-left>Cloverhound Blog: Wes</h2>
+		<h2 id=left>Cloverhound Blog: Wes</h2>
 
-		<%= button_to "Home", root_path, class:"button" , id:"header-left", :method => "get" %>
+		<%= button_to "Home", root_path, class:"button" , id:"left", :method => "get" %>
 		<%= button_to "New Article", new_article_path, class:"button", :method => "get" %>
 
 	</div>
