--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -4,6 +4,7 @@
 
 #title {
 	margin-left: 1%;
+	margin-top: 0;
 }
 
 #article-body {
@@ -15,6 +16,9 @@
 	background-color: #f4f4f4;
 	margin-left: 1%;
 	margin-right: 1%;
+
+	padding-top: .5%;
+	padding-bottom: .5%;
 }
 
 .article button {
@@ -26,4 +30,8 @@
 	background-color: #f4f4f4;
 	padding-left: 25px;
 	padding: 5px;
+}
+
+.add-comment {
+	margin-left: 1%;
 }
